--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 2,
 
-    "name": "myTIM extension",
-    "description": "for myTIM",
+    "name": "mtim extension",
+    "description": "for mtim",
     "version": "1.1",
 
     "background": {
