--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
     "background": {
         "scripts": [ "background.js" ],
-        "persistent": false
+        "persistent": true
     },
 
     "content_scripts": [
@@ -26,6 +26,6 @@
         "default_popup": "popup.html"
     },
     "permissions": [
-    "storage", "tabs", "declarativeContent"
+    "storage", "declarativeContent"
     ]
 }
