--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
         },
         {
             "js": ["confirm_mod.js"],
-            "matches": [ "https://whm.accenture.com/mytim/secure/punchClock/confirm"]
+            "matches": [ "https://whm.accenture.com/mytim/secure/punchClock/confirm", "https://developer.mozilla.org/*"]
         }
     ],
     "page_action": {
@@ -26,6 +26,6 @@
         "default_popup": "popup.html"
     },
     "permissions": [
-    "storage", "declarativeContent"
+    "storage", "declarativeContent", "tabs"
     ]
 }
