add contextMenu to access mtim easily

--- a/manifest.json
+++ b/manifest.json
@@ -26,6 +26,6 @@
         "default_popup": "src/popup/popup.html"
     },
     "permissions": [
-    "declarativeContent", "tabs"
+    "declarativeContent", "tabs", "contextMenus"
     ]
 }
