--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
     "background": {
         "scripts": [ "src/background.js" ],
-        "persistent": false
+        "persistent": true
     },
 
     "content_scripts": [
